# arc

./: CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  justfile  release.toml
.github/workflows/: ci.yml  release.yml
crates/capture/: Cargo.toml
crates/capture/src/: gdi.rs  lib.rs  wgc.rs
crates/cli/: Cargo.toml
crates/cli/src/: agents_md.rs  capture.rs  config.rs  exec.rs  files.rs  main.rs  mcp.rs  ui.rs
crates/net/: Cargo.toml
crates/net/src/: config.rs  controller.rs  error.rs  lib.rs  session.rs
crates/proto/: Cargo.toml
crates/proto/src/: codec.rs  crypto.rs  error.rs  id.rs  lib.rs  relay.rs  wire.rs
crates/relay/: Cargo.toml
crates/relay/src/: connection.rs  hub.rs  main.rs
crates/runner/: Cargo.toml
crates/runner/examples/: probe.rs
crates/runner/src/: apps.rs  capture.rs  cfg.rs  clipboard.rs  dispatch.rs  exec.rs  files.rs  input.rs  main.rs  uia.rs
docs/: from-ssh.md
scripts/: agent-rc-relay-loop.bat  agent-rc-runner-loop.bat  e2e_windows.bat  kill-runner.ps1  run_runner.bat
