[workspace]
resolver = "3"
members = ["crates/proto", "crates/net", "crates/relay", "crates/runner", "crates/cli"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/agent-rt/arc"
rust-version = "1.96"

[workspace.dependencies]
arc-proto = { path = "crates/proto" }
arc-net = { path = "crates/net" }
serde = { version = "1", features = ["derive"] }
ciborium = "0.2"
thiserror = "2"
snow = "0.9"
blake2 = "0.10"
spake2 = "0.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", features = ["ws"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
dashmap = "6"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
rmcp = { version = "1.8", features = ["server", "macros", "transport-io", "schemars"] }
schemars = "1"
base64 = "0.22"
anyhow = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
