[package]
name = "arc-runner"
description = "Windows-side runner: executes Agent commands (shell, capture, UI automation) over the arc protocol."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "arc-runner"
path = "src/main.rs"

[dependencies]
arc-proto.workspace = true
arc-net.workspace = true
arc-capture.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
blake2.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
image = { version = "0.25", default-features = false, features = ["png", "webp"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_UI_Accessibility",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
